--- a/app/components/search-modal.module.css
+++ b/app/components/search-modal.module.css
@@ -172,7 +172,15 @@
 
 @media (max-width: 760px) {
   .trigger {
-    width: 100%;
+    width: 38px;
+    height: 38px;
+    border-radius: 999px;
+    padding: 0;
+    justify-content: center;
+  }
+
+  .triggerText {
+    display: none;
   }
 
   .modal {
