--- a/app/components/featured-products-grid.module.css
+++ b/app/components/featured-products-grid.module.css
@@ -33,11 +33,11 @@
 
 .cardBody {
   background: #fff;
-  padding: 11px;
+  padding: 11px 11px 8px;
   display: flex;
   flex-direction: column;
-  gap: 2px;
-  min-height: 148px;
+  gap: 3px;
+  min-height: 136px;
 }
 
 .cardBody h3 {
@@ -74,6 +74,8 @@
 .priceStack {
   display: grid;
   gap: 2px;
+  min-height: 36px;
+  align-content: start;
 }
 
 .previousPrice {
@@ -81,6 +83,10 @@
   font-size: 13px;
   line-height: 1;
   text-decoration: line-through;
+}
+
+.previousPriceEmpty {
+  visibility: hidden;
 }
 
 .cardBottom strong {
