--- a/app/components/featured-products-grid.module.css
+++ b/app/components/featured-products-grid.module.css
@@ -36,8 +36,8 @@
   padding: 11px;
   display: flex;
   flex-direction: column;
-  gap: 3px;
-  min-height: 136px;
+  gap: 8px;
+  min-height: 118px;
 }
 
 .cardBody h3 {
@@ -47,18 +47,6 @@
   line-height: 1.1;
   letter-spacing: -0.02em;
   min-height: calc(1.1em * 2);
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-}
-
-.cardBody p {
-  margin: 0;
-  color: #66748c;
-  font-size: 13px;
-  line-height: 1.28;
-  min-height: calc(1.28em * 2);
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -144,6 +132,10 @@
     font-size: 14px;
     gap: 5px;
     padding-inline: 8px;
+  }
+
+  .cardBody {
+    min-height: 106px;
   }
 }
 
