--- a/app/home.module.css
+++ b/app/home.module.css
@@ -118,7 +118,8 @@
   text-decoration: none;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.15;
+  line-height: 1.3;
+  padding-block: 2px;
 }
 
 .headerRight {
